--- a/GH_Commit.ipynb
+++ b/GH_Commit.ipynb
@@ -357,6 +357,63 @@
   },
   {
    "cell_type": "markdown",
+   "id": "f3f34c52",
+   "metadata": {},
+   "source": [
+    "**Option C — Full Resync Commit**\n",
+    "\n",
+    "* Workflow\n",
+    "\n",
+    "    * This workflow is tailored to situations where: \n",
+    "        * new folders added\n",
+    "        * old folders deleted\n",
+    "        * modified files. \n",
+    "    * It ensures the GitHub repository mirrors exactly the current working directory."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5c7fb717",
+   "metadata": {
+    "vscode": {
+     "languageId": "powershell"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# 1. Check current repository status\n",
+    "git status\n",
+    "# 2. Stage all changes including new, modified, and deleted files\n",
+    "git add -A\n",
+    "# 3. Commit with a descriptive message\n",
+    "git commit -m \"Resync repository: remove old folders, add Project_x & Project_y\"\n",
+    "# 4. Push changes to the remote GitHub repository\n",
+    "git push origin main"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1502f599",
+   "metadata": {},
+   "source": [
+    "**Description**\n",
+    "\n",
+    "* `git status` shows what will be committed.\n",
+    "* `git add -A` stages everything: new folders, modified files, and deletions.\n",
+    "* `git commit -m` \"...\" saves a snapshot of your current state with a descriptive message.\n",
+    "* `git push origin main` uploads your changes to GitHub.\n",
+    "* This approach ensures the local folder tree and the remote GitHub repository are fully synchronized.\n",
+    "\n",
+    "**Historical Note**\n",
+    "\n",
+    "* Early version control (1960s-1970s) required manual tracking of file changes and deletions.\n",
+    "* Git (2005) introduced staging and local-first commits allowing precise snapshots.\n",
+    "* git add -A and full resyncs reflect modern workflows for managing complex project directories efficiently, preventing discrepancies between local and remote repositories."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "2758f33c",
    "metadata": {},
    "source": [
