Resync repository: Decluttered some folders, finished 01_Gemoetric_Patterns' Jupyter Notebook, edited other files.

--- a/01_Geometric_Patterns/A_Shapes/Projects/Project_01_1_Circle/B_BCircle_Starter_Notebook.ipynb
+++ b/01_Geometric_Patterns/A_Shapes/Projects/Project_01_1_Circle/B_BCircle_Starter_Notebook.ipynb
@@ -43,11 +43,12 @@
     "\n",
     "* `numpy` is used for numerical operations and generating arrays of values.\n",
     "* `matplotlib.pyplot` is used for plotting geometric figures and visualization.\n",
+    "* `np` & `plt` are shorter versions of the tools' names. They allow us referencing the same tools by using their shorter aliases.\n",
     "\n",
     "**Historical note**\n",
     "\n",
     "* Numerical tables for trigonometric functions were computed manually for centuries.\n",
-    "* `NumPy` (2006) replaced hand‑computed tables with fast vectorized computation."
+    "* `NumPy` (2006) replaced its predecessing Python libraries: `Numeric` and `Numarray`. It has been the standard array package for Python scientific computing ever since."
    ]
   },
   {
@@ -84,7 +85,7 @@
     "\n",
     "**Historical note**\n",
     "\n",
-    "* Translating geometric figures appears in Euclidean geometry (~300 BCE), though not expressed algebraically until much later."
+    "* Translating geometric figures appears in Euclidean geometry (e.g. Common Notion 4) (~300 BCE), though not expressed algebraically until much later."
    ]
   },
   {
@@ -117,6 +118,7 @@
     "\n",
     "* `theta` represents the angle sweeping around the circle.\n",
     "* `linspace` generates evenly spaced values between `0` and `2π`.\n",
+    "* `200` in [...]`np.linspace(0, 2 * np.pi, 200)` belongs to the `num` argument  and dictates total count of evenly spaced elements within the specified range: `0,2*np.pi`. It helps with the resolution of the data being generated.\n",
     "\n",
     "**Grammar note**\n",
     "\n",
@@ -124,7 +126,7 @@
     "\n",
     "**Historical note**\n",
     "\n",
-    "* Radians originate from arc‑length geometry studied by ancient Greeks."
+    "* Radians became a formal unit of angle measurement developed in the early eighteenth century(Roger Cotes), with origins in studies of arc-length geometry by the ancient Greeks(Hipparcus, Ptolemy), who in turn based their work on earlier practical geometric techniques from the Babylonians and Egyptians, whose practices may themselves have been influenced by even earlier cultures such as the Sumerians(Base-60)."
    ]
   },
   {
