Repository Resync: Added Project_01_0A_Point folder together with its respective files: .md, .ipynb, .py | Added Empty folders: Project_01_0B_Line, Project_01_3_Rectangle, Project_01_4_Triangle

--- a/01_Geometric_Patterns/A_Shapes/B_01_Introductory_Architectural_Programming.ipynb
+++ b/01_Geometric_Patterns/A_Shapes/B_01_Introductory_Architectural_Programming.ipynb
@@ -356,7 +356,7 @@
     "\n",
     "Preamble: Variables Across Platforms\n",
     "\n",
-    "In Python, all variables are technically dynamic (types resolved at runtime). However, architectural and computational clarity requires semantic distinction based on role, not type. This same distinction exists in visual programming:\n",
+    "In Python, all variables are technically dynamic (types resolved at runtime). However, architectural and computational clarity may require semantic distinction based on role, not type. This same distinction exists in visual programming:\n",
     "\n",
     "* Grasshopper: Sliders (independent) vs. derived components (dependent)\n",
     "* Dynamo: Input nodes (independent) vs. computed nodes (dependent)\n",
@@ -423,9 +423,9 @@
     "\n",
     "Design implication: These variables establish the initial conditions of the design space and represent external agency entering the system. The user interface for parameter input varies by platform, but the conceptual role remains constant.\n",
     "\n",
-    "Historical note: This distinction mirrors the separation between given constraints and design decisions formalized in Christopher Alexander's Notes on the Synthesis of Form (1964)[1].\n",
+    "Historical note: This distinction mirrors the separation between given constraints and design decisions, formalized in works such as Christopher Alexander's Notes on the Synthesis of Form (1964)[1].\n",
     "\n",
-    "Transfer principle: Whether moving a Grasshopper slider or typing a Python value, you're performing the same design operation—adjusting an independent parameter to explore the design space."
+    "Transfer principle: Whether moving a Grasshopper slider or typing a Python value, you're performing the same design operation; adjusting an independent parameter to explore the design space."
    ]
   },
   {
